Bug 853851 - Transition some breakpad logging to BPLOG.  r=ted