toolkit/crashreporter/google-breakpad/src/common/pathname_stripper.cc
@@ -33,7 +33,7 @@
 //
 // Author: Mark Mentovai
 
-#include "processor/pathname_stripper.h"
+#include "common/pathname_stripper.h"
 
 namespace google_breakpad {
 
