toolkit/crashreporter/google-breakpad/src/processor/range_map-inl.h
@@ -40,7 +40,7 @@
 #include <assert.h>
 
 #include "processor/range_map.h"
-#include "processor/logging.h"
+#include "common/logging.h"
 
 
 namespace google_breakpad {
